# elite-dashboard-api

./: Cargo.toml  Dockerfile  README.md  auth-redirect.html  rustfmt.toml
.github/workflows/: rust.yml
migrations/: V1__add_elite_table.sql  V2__add_tracked_uuids_table.sql  V3__add_tracked_uuids_history_table.sql  V4__add_name_history_table.sql  V5__add_skin_history_table.sql  V6__add_elites_with_ign_view.sql  V7__alter_elites_with_ign_view_add_being_tracked.sql
src/: config.rs  discord.rs  jwt.rs  logger.rs  main.rs  redis.rs
src/app/: constants.rs  error.rs  mod.rs  state.rs  tracing.rs
src/config/: app.rs  mod.rs
src/ctx/: mod.rs
src/db/: db.rs  error.rs  migrations.rs  mod.rs  redis.rs
src/model/: mod.rs  recent_change.rs  session.rs
src/model/discord/: auth.rs  guild.rs  member.rs  mod.rs  role.rs  role_tag.rs  user.rs
src/model/elite/: elite.rs  mod.rs
src/service/: constant.rs  elite.rs  error.rs  ign_tracker.rs  jwt.rs  mod.rs  session.rs
src/service/discord/: discord_api.rs  discord_auth.rs  error.rs  mod.rs
src/web/: error.rs  mod.rs  routes_auth.rs  routes_auth_discord.rs  routes_discord_api.rs  routes_elite.rs
src/web/handlers/: handlers_auth_discord.rs  mod.rs
src/web/html/: discord-auth-failed.html
src/web/middleware/: mod.rs  mw_auth.rs  mw_req_log.rs  mw_req_stamp.rs  mw_response_map.rs  mw_session.rs  mw_staff_only.rs
src/web/routes/: auth.rs  dashboard.rs  elite.rs  ign_history.rs  mod.rs
