[package]
name = "elite-dashboard-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-macros = "0.5.0"
tower-http = { version = "0.6.2", features = ["fs"] }
tower-cookies = "0.11.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.12.0"
serde-inline-default = "0.2.3"
urlencoding = "2.1.3"
reqwest = { version = "0.12.12", features = ["json"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
redis = "0.28.1"
redis_pool = "0.7.0"
jsonwebtoken = "9.3.0"
sqlx = "0.8.3"
uuid = { version = "1.12.1", features = ["v4"] }
time = { version = "0.3.37", features = ["serde"] }
config = { version = "0.15.6" }
chrono = { version = "0.4.39", features = ["serde"] }
