[package]
name = "elite-dashboard-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-macros = "0.5.0"
chrono = { version = "0.4.39", features = ["serde"] }
config = { version = "0.15.6" }
hex = "0.4.3"
jsonwebtoken = "9.3.0"
oauth2 = "5.0.0"
rand = "0.9.0"
redis = { version = "0.29.2", features = ["tokio-comp"] }
redis_pool = "0.7.0"
reqwest = { version = "0.12.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_json = "1.0.137"
serde_with = "3.12.0"
time = { version = "0.3.37", features = ["serde"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.12.1", features = ["v4"] }

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
