[package]
name = "elite-dashboard-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
axum-macros = "0.5.0"
chrono = { version = "0.4.40", features = ["serde"] }
config = { version = "0.15.6" }
deadpool-postgres = "0.14.1"
hex = "0.4.3"
oauth2 = "5.0.0"
rand = "0.9.0"
redis = { version = "0.29.5", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.15", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_json = "1.0.137"
strum = "0.27.1"
strum_macros = "0.27.1"
time = { version = "0.3.37", features = ["serde"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4"] }

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
